--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.43.5",
+    "react-icons": "^4.8.0",
+    "react-router": "6.8.2",
+    "react-router-dom": "6.8.2",
     "react-scripts": "5.0.1",
     "typescript": "4.4.2",
     "web-vitals": "2.1.0",
@@ -45,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router": "5.1.20",
+    "@types/react-router-dom": "5.3.3"
   }
 }
