--- a/package.json
+++ b/package.json
@@ -1,33 +1,20 @@
 {
   "name": "mui-react-hook-form",
   "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@emotion/react": "11.10.6",
-    "@emotion/styled": "11.10.6",
-    "@hookform/resolvers": "2.9.11",
-    "@mui/material": "5.11.12",
-    "@testing-library/jest-dom": "5.14.1",
-    "@testing-library/react": "13.0.0",
-    "@testing-library/user-event": "13.2.1",
-    "@types/jest": "27.0.1",
-    "@types/node": "16.7.13",
-    "@types/react": "18.0.0",
-    "@types/react-dom": "18.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "7.43.5",
-    "react-icons": "^4.8.0",
-    "react-router": "6.8.2",
-    "react-router-dom": "6.8.2",
-    "react-scripts": "5.0.1",
-    "typescript": "4.4.2",
-    "web-vitals": "2.1.0",
-    "yup": "1.0.2"
+  "private": false,
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "repository": {
+    "type": " git",
+    "url": "https://github.com/rafalmeidas/mui-react-hook-form"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.tsx,test.tsx,__snapshots__",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -49,8 +36,40 @@
       "last 1 safari version"
     ]
   },
+  "dependencies": {
+    "@emotion/react": "11.10.6",
+    "@emotion/styled": "11.10.6",
+    "@hookform/resolvers": "2.9.11",
+    "@mui/material": "5.11.12",
+    "@testing-library/jest-dom": "5.14.1",
+    "@testing-library/react": "13.0.0",
+    "@testing-library/user-event": "13.2.1",
+    "@types/jest": "27.0.1",
+    "@types/node": "16.7.13",
+    "react-hook-form": "7.43.5",
+    "react-icons": "4.8.0",
+    "react-router": "6.8.2",
+    "react-router-dom": "6.8.2",
+    "react-scripts": "5.0.1",
+    "typescript": "4.4.2",
+    "web-vitals": "2.1.0",
+    "yup": "1.0.2"
+  },
   "devDependencies": {
     "@types/react-router": "5.1.20",
-    "@types/react-router-dom": "5.3.3"
+    "@types/react-router-dom": "5.3.3",
+    "@types/react": "18.0.0",
+    "@types/react-dom": "18.0.0",
+    "babel-cli": "6.26.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.43.5"
+  },
+  "peerDependencies": {
+    "@types/react": "18.0.0",
+    "@types/react-dom": "18.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.43.5"
   }
 }
